fixed misalignment in navbar on mobiles

--- a/src/App.scss
+++ b/src/App.scss
@@ -217,6 +217,10 @@ h6 {
     color: inherit;
   }
 
+  .backdrop{
+    display: none;
+  }
+
   .navbar-left {
     font-family: 'archia';
     font-weight: 600;
